--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-    "presets": [
-        "next/babel",
-        "@zeit/next-typescript/babel"
-    ],
-    "plugins": [
-        "babel-plugin-styled-components"
-    ]
+    "presets": ["next/babel", "@zeit/next-typescript/babel"],
+    "plugins": ["babel-plugin-styled-components"]
 }
