--- a/package.json
+++ b/package.json
@@ -1,37 +1,43 @@
 {
-  "name": "create-next-example-app",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@types/classnames": "^2.2.7",
-    "@types/next": "^8.0.5",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.8.16",
-    "@types/styled-components": "^4.1.14",
-    "@types/styled-jsx": "^2.2.8",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "classnames": "^2.2.6",
-    "effector": "^0.18.7",
-    "effector-react": "^0.18.10",
-    "fork-ts-checker-webpack-plugin": "^1.3.0",
-    "immer": "^3.1.1",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "^8.1.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-touch-ripple": "^0.2.1",
-    "style-loader": "^0.23.1",
-    "styled-components": "^4.2.0",
-    "styled-jsx": "^3.2.1",
-    "typescript": "^3.4.5",
-    "typescript-styled-plugin": "^0.14.0",
-    "typings-for-css-modules-loader": "^1.7.0"
-  }
+    "name": "create-next-example-app",
+    "scripts": {
+        "dev": "concurrently \"next\" \"npm run prettier-watch\"",
+        "build": "next build",
+        "start": "next start",
+        "prettier-watch": "onchange \"**/*.(js|jsx|ts|tsx|css|scss)\" -- prettier --write {{changed}}"
+    },
+    "dependencies": {
+        "classnames": "^2.2.6",
+        "effector": "^0.18.7",
+        "effector-react": "^0.18.10",
+        "immer": "^3.1.1",
+        "isomorphic-unfetch": "^3.0.0",
+        "next": "^8.1.0",
+        "node-sass": "^4.12.0",
+        "onchange": "^5.2.0",
+        "prettier": "^1.17.1",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-touch-ripple": "^0.2.1",
+        "style-loader": "^0.23.1",
+        "styled-components": "^4.2.0",
+        "styled-jsx": "^3.2.1",
+        "typescript": "^3.4.5",
+        "typescript-styled-plugin": "^0.14.0",
+        "typings-for-css-modules-loader": "^1.7.0"
+    },
+    "devDependencies": {
+        "@types/classnames": "^2.2.7",
+        "@types/next": "^8.0.5",
+        "@types/node": "^12.0.0",
+        "@types/react": "^16.8.16",
+        "@types/styled-components": "^4.1.14",
+        "@types/styled-jsx": "^2.2.8",
+        "@zeit/next-css": "^1.0.1",
+        "@zeit/next-sass": "^1.0.1",
+        "@zeit/next-typescript": "^1.1.1",
+        "babel-plugin-styled-components": "^1.10.0",
+        "concurrently": "^4.1.0",
+        "fork-ts-checker-webpack-plugin": "^1.3.0"
+    }
 }
