chore(tsconfig): add noImplicitAny

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         "sourceMap": true,
         "strict": true,
         "target": "esnext",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "noImplicitAny": false
     },
     "include": [
         "components/**/*",
