--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-touch-ripple": "^0.2.1",
+        "react-transition-group": "^4.0.1",
         "style-loader": "^0.23.1",
         "styled-components": "^4.2.0",
         "styled-jsx": "^3.2.1",
@@ -35,6 +36,8 @@
         "@types/next": "^8.0.5",
         "@types/node": "^12.0.0",
         "@types/react": "^16.8.16",
+        "@types/react-dom": "^16.8.4",
+        "@types/react-transition-group": "^2.9.1",
         "@types/styled-components": "^4.1.14",
         "@types/styled-jsx": "^2.2.8",
         "@zeit/next-css": "^1.0.1",
