--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "express": "^4.17.0",
         "immer": "^3.1.1",
         "isomorphic-unfetch": "^3.0.0",
+        "jwt-simple": "^0.5.6",
         "next": "^8.1.0",
+        "next-cookies": "^1.1.2",
         "node-sass": "^4.12.0",
         "onchange": "^5.2.0",
         "prettier": "^1.17.1",
@@ -23,6 +25,7 @@
         "react-dom": "^16.8.6",
         "react-touch-ripple": "^0.2.1",
         "react-transition-group": "^4.0.1",
+        "shortid": "^2.2.14",
         "style-loader": "^0.23.1",
         "styled-components": "^4.2.0",
         "styled-jsx": "^3.2.1",
@@ -38,6 +41,7 @@
         "@types/react": "^16.8.16",
         "@types/react-dom": "^16.8.4",
         "@types/react-transition-group": "^2.9.1",
+        "@types/shortid": "^0.0.29",
         "@types/styled-components": "^4.1.14",
         "@types/styled-jsx": "^2.2.8",
         "@zeit/next-css": "^1.0.1",
