--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "dependencies": {
         "@material-ui/core": "^3.9.3",
         "@material-ui/icons": "^3.0.2",
+        "@zeit/next-css": "^1.0.1",
+        "@zeit/next-sass": "^1.0.1",
+        "@zeit/next-typescript": "^1.1.1",
+        "babel-plugin-styled-components": "^1.10.0",
         "classnames": "^2.2.6",
         "effector": "^0.18.7",
         "effector-react": "^0.18.10",
         "express": "^4.17.0",
+        "fork-ts-checker-webpack-plugin": "^1.3.0",
         "immer": "^3.1.1",
         "isomorphic-unfetch": "^3.0.0",
         "jwt-simple": "^0.5.6",
         "next": "^8.1.0",
         "next-cookies": "^1.1.2",
         "node-sass": "^4.12.0",
+        "nprogress": "^0.2.0",
         "onchange": "^5.2.0",
         "prettier": "^1.17.1",
         "react": "^16.8.6",
@@ -34,18 +40,14 @@
         "styled-jsx": "^3.2.1",
         "typescript": "^3.4.5",
         "typescript-styled-plugin": "^0.14.0",
-        "typings-for-css-modules-loader": "^1.7.0",
-        "@zeit/next-typescript": "^1.1.1",
-        "@zeit/next-sass": "^1.0.1",
-        "@zeit/next-css": "^1.0.1",
-        "fork-ts-checker-webpack-plugin": "^1.3.0",
-        "babel-plugin-styled-components": "^1.10.0"
+        "typings-for-css-modules-loader": "^1.7.0"
     },
     "devDependencies": {
         "@types/classnames": "^2.2.7",
         "@types/material-ui": "^0.21.6",
         "@types/next": "^8.0.5",
         "@types/node": "^12.0.0",
+        "@types/nprogress": "^0.0.29",
         "@types/react": "^16.8.16",
         "@types/react-dom": "^16.8.4",
         "@types/react-transition-group": "^2.9.1",
